# OC_SORT_CPP

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  L.cpp  LICENSE  README_EN.md  cmake_build.txt  cnpy.h  generate_all_result.cpp  main.cpp  read_MOTtxt.cpp  read_tensor.cpp  readme.md  test.cpp  test_MOT17.cpp  test_assignment.cpp  test_associate.cpp  test_rollback.cpp  test_vis.cpp  vcpkg.json
BINARY_DATA/: 1.csv  10.csv  100.csv  101.csv  106.csv  108.csv  109.csv  112.csv  114.csv  115.csv  117.csv  118.csv  12.csv  120.csv  125.csv  13.csv  130.csv  132.csv  133.csv  134.csv  136.csv  140.csv  141.csv  142.csv  144.csv  147.csv  149.csv  15.csv  17.csv  19.csv  27.csv  3.csv  30.csv  33.csv  38.csv  4.csv  40.csv  42.csv  43.csv  44.csv  (+29 more)
BINARY_DATA/MOT17/: 102.csv  103.csv  104.csv  105.csv  107.csv  11.csv  110.csv  111.csv  113.csv  116.csv  119.csv  121.csv  122.csv  123.csv  124.csv  126.csv  127.csv  128.csv  129.csv  131.csv  135.csv  137.csv  138.csv  139.csv  14.csv  143.csv  145.csv  146.csv  148.csv  150.csv  151.csv  152.csv  153.csv  154.csv  155.csv  156.csv  157.csv  158.csv  159.csv  16.csv  (+416 more)
MOT17/test/MOT17-01-DPM/det/: det.csv  det.txt
MOT17/test/MOT17-01-FRCNN/det/: det.txt
MOT17/test/MOT17-01-SDP/det/: det.txt
MOT17/test/MOT17-03-FRCNN/det/: det.txt
MOT17/test/MOT17-06-DPM/det/: det.txt
MOT17/test/MOT17-06-FRCNN/det/: det.txt
MOT17/test/MOT17-06-SDP/det/: det.txt
MOT17/test/MOT17-07-DPM/det/: det.txt
MOT17/test/MOT17-07-FRCNN/det/: det.txt
MOT17/test/MOT17-07-SDP/det/: det.txt
MOT17/test/MOT17-08-DPM/det/: det.txt
MOT17/test/MOT17-08-FRCNN/det/: det.txt
MOT17/test/MOT17-08-SDP/det/: det.txt
MOT17/test/MOT17-12-DPM/det/: det.txt
MOT17/test/MOT17-12-FRCNN/det/: det.txt
MOT17/test/MOT17-12-SDP/det/: det.txt
MOT17/test/MOT17-14-DPM/det/: det.txt
MOT17/test/MOT17-14-FRCNN/det/: det.txt
OUTPUT_DATA/MOT17/: 1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  134.txt  (+485 more)
android-demo/: .gitignore  settings.gradle
android-demo/app/: build.gradle
android-demo/app/src/main/: AndroidManifest.xml
android-demo/app/src/main/java/com/gyq/yolov8/: MainActivity.java  Yolov8Ncnn.java
android-demo/app/src/main/jni/: CMakeLists.txt  Object.h  ndkcamera.cpp  yolo.cpp  yolo.h  yolov8ncnn.cpp
android-demo/app/src/main/jni/ncnn-20230223-android-vulkan/arm64-v8a/include/ncnn/: platform.h
android-demo/app/src/main/jni/ncnn-20230223-android-vulkan/armeabi-v7a/include/ncnn/: platform.h
android-demo/app/src/main/jni/ncnn-20230223-android-vulkan/x86/include/ncnn/: platform.h
android-demo/app/src/main/jni/ncnn-20230223-android-vulkan/x86_64/include/ncnn/: layer_shader_type_enum.h  platform.h
android-demo/app/src/main/jni/ncnn-20230223-android-vulkan/x86_64/lib/pkgconfig/: ncnn.pc
android-demo/app/src/main/jni/opencv-mobile-4.6.0-android/: LICENSE
android-demo/app/src/main/jni/opencv-mobile-4.6.0-android/sdk/native/jni/include/opencv2/: features2d.hpp  imgproc.hpp  video.hpp
android-demo/app/src/main/jni/opencv-mobile-4.6.0-android/sdk/native/jni/include/opencv2/core/: async.hpp  quaternion.hpp  utility.hpp
android-demo/app/src/main/jni/opencv-mobile-4.6.0-android/sdk/native/jni/include/opencv2/core/cuda/: functional.hpp
android-demo/app/src/main/jni/opencv-mobile-4.6.0-android/sdk/native/jni/include/opencv2/video/: tracking.hpp
android-demo/app/src/main/jni/opencv-mobile-4.6.0-android/sdk/native/jni/include/opencv2/video/detail/: tracking.detail.hpp
android-demo/app/src/main/res/values/: strings.xml
android-demo/gradle/wrapper/: gradle-wrapper.properties
include/: KalmanBoxTracker.h  OCsort.h  Utilities.h  association.h  kalmanfilter.h  lapjv.h
src/: CMakeLists.txt  KalmanBoxTracker.cpp  OCsort.cpp  Utilities.cpp  association.cpp  kalmanfilter.cpp  lapjv.cpp
test_data/: MOT17-02.txt
test_data/MOT17-01/: 1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  21.csv  22.csv  23.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
